--- a/sir_02.html
+++ b/sir_02.html
@@ -97,9 +97,9 @@
 <!--<div id="wrap" style="width: 100% !important; min-width: 100% !important;">-->
 	
 <!--설로인 리뉴얼 2.1.3v-->
-<div id="loading">
+<!-- <div id="loading">
     <img id="loading-image" src="http://cleaver2.godomall.com/data/skin/front/sirloin2021_06_15/img/header/loading_animation_01.gif" alt="Loading..." />
-</div>
+</div> -->
 
 <script type="text/javascript">
     window.onbeforeunload = function () { $('#loading').show(); }  //현재 페이지에서 다른 페이지로 넘어갈 때 표시해주는 기능
