--- a/sir_02.html
+++ b/sir_02.html
@@ -965,7 +965,7 @@
                                             </div>
                                             <div class="product-count">
                                                 <span>
-                                                    <input type="number" value="00">
+                                                    <input type="text" value="00">
                                                     <button>수량</button>
                                                 </span>
                                                 <div class="total-price">
@@ -1003,7 +1003,7 @@
                                             </div>
                                             <div class="product-count">
                                                 <span>
-                                                    <input type="number" value="00">
+                                                    <input type="text" value="00">
                                                     <button>수량</button>
                                                 </span>
                                                 <div class="total-price">
@@ -1057,7 +1057,7 @@
                                             </div>
                                             <div class="product-count">
                                                 <span>
-                                                    <input type="number" value="00">
+                                                    <input type="text" value="00">
                                                     <button>수량</button>
                                                 </span>
                                                 <div class="total-price">
@@ -1092,7 +1092,7 @@
                                             </div>
                                             <div class="product-count">
                                                 <span>
-                                                    <input type="number" value="00">
+                                                    <input type="text" value="00">
                                                     <button>수량</button>
                                                 </span>
                                                 <div class="total-price">
@@ -1139,7 +1139,7 @@
                                             </div>
                                             <div class="product-count">
                                                 <span>
-                                                    <input type="number" value="00">
+                                                    <input type="text" value="00">
                                                     <button>수량</button>
                                                 </span>
                                                 <div class="total-price">
@@ -1189,7 +1189,7 @@
                                                     <p class="pro-tit">{{샤토브리앙}}</p>
                                                     <p class="pro-set">{{세트}}:{{플래티넘B}}</p>
                                                     <p class="pro-number">
-                                                        <input type="number" value="00">
+                                                        <input type="text" value="00">
                                                         <button>수량</button>
                                                     </p>
                                                 </div>                                                
@@ -1208,7 +1208,7 @@
                                                     <span class="add-name">추가 상품</span>
                                                     <span class="add-info">{{고급 보자기 변경}}</span>
                                                     <span class="add-number">
-                                                        <input type="number" value="00">
+                                                        <input type="text" value="00">
                                                         <button>수량</button>
                                                     </span>
                                                     <span class="add-price">{{252,000}}원</span>
@@ -1217,12 +1217,73 @@
                                                     <span class="add-name">추가 상품</span>
                                                     <span class="add-info">{{고급 보자기 변경}}</span>
                                                     <span class="add-number">
-                                                        <input type="number" value="00">
+                                                        <input type="text" value="00">
                                                         <button>수량</button>
                                                     </span>
                                                     <span class="add-price">{{25,000}}원</span>
                                                 </li>                                                
                                             </ul>                                            
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <p class="total-txt">{{193,000}}원</p>
+                                        <p class="stxt-point"><img src="assets/img/etc/ico_m.svg" alt=""><span>적립 {{240}}원</span></p>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <span class="cus-check">
+                                            <input type="checkbox" id="c6">
+                                            <label for="c6"></label>
+                                        </span>
+                                    </td>
+                                    <td>
+                                        <div class="product-info">
+                                            <div class="product-name">
+                                                <img src="assets/img/etc/@thumb.png" alt="">
+                                                <div class="pro-txt-box">
+                                                    <p class="pro-tit">{{샤토브리앙}}</p>
+                                                    <p class="pro-set">{{세트}}:{{플래티넘B}}</p>
+                                                    <p class="pro-number">
+                                                        <input type="text" value="00">
+                                                        <button>수량</button>
+                                                    </p>
+                                                </div>                                                
+                                            </div>
+                                            <div class="product-count order-last">
+                                                <b>합계금액</b>
+                                                <div class="total-price">
+                                                    <p class="total-txt">{{193,000}}원</p>
+                                                    <p class="stxt-point"><img src="assets/img/etc/ico_m.svg" alt=""><span>적립 {{240}}원</span></p>
+                                                </div>
+                                            </div>
+                                            <div class="product-price">
+                                                <b>{{168,000}}원</b>
+                                            </div>
+                                            <ul class="product-add">
+                                                <li>
+                                                    <span class="add-name">추가 상품</span>
+                                                    <span class="add-info">{{고급 보자기 변경}}</span>
+                                                    <span class="add-count">{{N33}}개</span>
+                                                    <span class="add-price">{{252,000}}원</span>
+                                                </li>                                                
+                                                <li>
+                                                    <span class="add-name">추가 상품</span>
+                                                    <span class="add-info">{{고급 보자기 변경}}</span>
+                                                    <span class="add-number">
+                                                        <input type="text" value="00">
+                                                        <button>수량</button>
+                                                    </span>
+                                                    <span class="add-price">{{25,000}}원</span>
+                                                </li>                                                
+                                            </ul>
+                                            <div class="reserved-delivery">
+                                                <div class="lettering">
+                                                    <span>편지이름각인</span>
+                                                    <span>황햬림</span>
+                                                </div>
+                                                <button class="btn-reserved">예약 배송일 지정하기</button>
+                                            </div>
                                         </div>
                                     </td>
                                     <td>
