--- a/sir_02.html
+++ b/sir_02.html
@@ -1314,6 +1314,11 @@
                             </dl>
                             <span>+</span>
                             <dl>
+                                <dt>할인금액</dt>
+                                <dd>{{168,000}}원</dd>
+                            </dl>
+                            <span>+</span>
+                            <dl>
                                 <dt>배송비</dt>
                                 <dd>+{{3,000}}원</dd>
                             </dl>
@@ -1417,11 +1422,11 @@
                                     <li>출고일 기준, 거주지에 따라 새벽 또는 일반 배송으로 발송됩니다.</li>
                                 </ul>
                             </div>
-                        </div>
-                        <div class="btn">
-                            <a class="skinbtn point1 layer-close btn-close"><em>닫기</em></a>
-                            <a class="skinbtn point2 layerboard-save" id="btnToCart"><em>저장</em></a>
-                        </div>
+                            <div class="btn">
+                                <a class="skinbtn point1 layer-close btn-close"><em>닫기</em></a>
+                                <a class="skinbtn point2 layerboard-save" id="btnToCart"><em>저장</em></a>
+                            </div>
+                        </div>                        
                     </div>
                 </form>
             </div>
