--- a/sir_02.html
+++ b/sir_02.html
@@ -1248,6 +1248,10 @@
                                     </td>
                                     <td>
                                         <div class="product-info">
+                                            <div class="product-not">
+                                                <p>구매 불가 상품</p>
+                                                <a href="#a">사유 보기</a>
+                                            </div>
                                             <div class="product-name">
                                                 <img src="assets/img/etc/@thumb.png" alt="">
                                                 <div class="pro-txt-box">
